--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ header {
 .bandeau {
     width: 100%;
     height: 35px;
-
+    
     display: flex;
     align-items: center;
-
+    
     color: white;
     /* background-color: #0387CD; Bleu LPO manque de contraste */
     background-color: #0C7DCD;
-
+    
     overflow: hidden;
 }
 
@@ -134,14 +134,14 @@ p {
     opacity: 0;
 }
 
-.show-img {
+/* .show-img {
     right:0;
     pointer-events: unset;
     z-index: 2;
     opacity: 1;
     transition: opacity 500ms ease-in-out 500ms;
 
-}
+} */
 
 .ctn-img img {
     border-radius: 6px 0 0 6px;
@@ -151,7 +151,7 @@ p {
 
 footer {
     width: 100%;
-    height: 40px;
+    height: 80px;
    
     margin-top: 10px;
     padding-inline: 40px;
@@ -163,17 +163,17 @@ footer {
     /* background-color: #131b48; */
 }
 
-/* footer > a:first-child {
+.credits {
     position: relative;
-    bottom: 1px;
-} */
+    top: 15px;
+}
 
 footer, footer a {
     color: #8072df;
 }
 
 footer img {
-    width: 30px;
+    width: 50px;
     vertical-align: middle;
 }
 
