Update footer background

--- a/style.css
+++ b/style.css
@@ -159,8 +159,8 @@ footer {
     justify-content: space-between;
 
     font-size: 14px;
-    background-color: #131b4885;
-    /* background-color: #131b48; */
+    background-color: ##131b486e;
+    
 }
 
 .credits {
