--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ footer {
     justify-content: space-between;
 
     font-size: 14px;
-    background-color: ##131b486e;
+    background-color: #131b486e;
     box-shadow: -5px 0 15px 5px #131b4885;    
 }
 
